LU-7014 osd: add additional credits for generic IAM delete

IAM is different from regular htree used by regular directories.
it can recycle and shrink blocks which needs additional credits.

Change-Id: I819d26206b158a0e8ef2a9110ba89fe34e5a1925
Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-on: http://review.whamcloud.com/16213
Reviewed-by: Fan Yong <fan.yong@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>